src/styles.css
:root {
  --button-bg: #ffffff;
  --button-color: #000000;
}

html, body, #__next {
  height: 100%;
  margin: 0;
}

body {
  font-family: sans-serif;
  display: flex;
  overflow: hidden;
}

body[data-theme='dark'] {
  background: #000;
  color: #fff;
  --button-bg: #111;
  --button-color: #fff;
}
#layout {
  display: flex;
  flex: 1;
  height: 100%;
}
main {
  flex: 1;
  position: relative;
}

